--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -14,6 +14,10 @@ engines:
     enabled: true
   pep8:
     enabled: true
+    checks:
+      # Line to long
+      E501:
+        enabled: false
 ratings:
   paths:
   - "**.inc"
