--- a/.travis.yml
+++ b/.travis.yml
@@ -17,9 +17,10 @@ before_install:
   - conda config --set always_yes yes --set changeps1 no
   - conda update -q conda
   - conda info -a
+  - conda config --add channels conda-forge
 # command to install dependencies
 install:
-  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION numpy scipy astropy matplotlib
+  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION numpy scipy astropy matplotlib numba llvmlite
   - source activate test-environment
   - pip install -r requirements.txt
   - python setup.py install
