--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ install:
   # Test requirements
   - pip install pytest pytest-cov hypothesis python-coveralls codeclimate-test-reporter
 
-  - git clone git@github.com:jason-neal/spectrum_overload.git
+  - git clone https://github.com/jason-neal/spectrum_overload.git
   - cd spectrum_overload
   - python setup.py install
   - cd ..
