--- a/.travis.yml
+++ b/.travis.yml
@@ -27,19 +27,13 @@ install:
   - python setup.py install
   # Test requirements
   - pip install pytest pytest-cov hypothesis python-coveralls codeclimate-test-reporter
+  
   # Clone spectrum_overload
-  - git clone https://github.com/jason-neal/spectrum_overload.git
-  - cd spectrum_overload
-  - python setup.py install
-  - cd ..
+  - pip install https://github.com/jason-neal/spectrum_overload/archive/master.zip
   # clone Starfish
   - conda install h5py cython pyyaml scikit-learn emcee corner
-  - git clone https://github.com/iancze/Starfish.git
-  -  cd Starfish
-  - python setup.py build_ext --inplace
-  - python setup.py install
-  - rm tests -r -f     # stop starfish tests running
-  - cd ..
+  - pip install https://github.com/iancze/Starfish/archive/master.zip
+  
 # command to run tests
 script:
     pytest --cov=utilities --cov-report term-missing --durations 5
