--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ install:
   - pip install -r requirements.txt
   - python setup.py install
   # Test requirements
-  - pip install pytest pytest-cov hypothesis python-coveralls codeclimate-test-reporter
+  - travis_retry pip install -r test_requirements.txt
 
   # Clone spectrum_overload
   - pip install https://github.com/jason-neal/spectrum_overload/archive/master.zip
@@ -45,5 +45,7 @@ script:
     pytest --cov=utilities --cov-report term-missing --durations 5
 
 after_success:
-  - coveralls
+  - coveralls -i
   - codeclimate-test-reporter
+  - coverage xml -i
+  - python-codacy-coverage -r coverage.xml
