--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,11 @@ python:
 
 before_install:
   # http://conda.pydata.org/docs/travis.html
-  - sudo apt-get update
+  - travis_retry sudo apt-get update
   - if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then
-       wget https://repo.continuum.io/miniconda/Miniconda2-latest-Linux-x86_64.sh -O miniconda.sh;
+       travis_retry wget https://repo.continuum.io/miniconda/Miniconda2-latest-Linux-x86_64.sh -O miniconda.sh;
     else
-       wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
+       travis_retry wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
     fi
   - bash miniconda.sh -b -p $HOME/miniconda
   - export PATH="$HOME/miniconda/bin:$PATH"
@@ -23,18 +23,20 @@ before_install:
 install:
   - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION numpy scipy astropy matplotlib numba llvmlite multiprocess ephem tqdm joblib
   - source activate test-environment
-  - pip install -r requirements.txt
-  - python setup.py install
   # Test requirements
   - travis_retry pip install -r test_requirements.txt
 
+  - travis_retry pip install -r requirements.txt
+  - travis_retry python setup.py install
+
   # Clone spectrum_overload
-  - pip install https://github.com/jason-neal/spectrum_overload/archive/master.zip
-  # clone Starfish
-  - conda install h5py cython pyyaml scikit-learn emcee corner
-  - git clone  https://github.com/iancze/Starfish.git
+  - travis_retry pip install https://github.com/jason-neal/spectrum_overload/archive/master.zip
+
+  # Install Starfish
+  - travis_retry conda install h5py cython pyyaml scikit-learn emcee corner
+  - travis_retry git clone  https://github.com/iancze/Starfish.git
+  - travis_retry pip install -r Starfish/requirements.txt
   - cd Starfish
-  - pip install -r requirements.txt
   - python setup.py build_ext --inplace
   - python setup.py install
   - cd ..
