--- a/.travis.yml
+++ b/.travis.yml
@@ -40,11 +40,12 @@ install:
   - python setup.py build_ext --inplace
   - python setup.py install
   - cd ..
+  - rm Starfish -rf     # to not test Starfish
 # - pip install https://github.com/iancze/Starfish/archive/master.zip
 
 # command to run tests
 script:
-    pytest --cov=utilities --cov-report term-missing --durations 5
+    pytest --cov=. --cov-report term-missing --durations 5
 
 after_success:
   - coveralls -i
