--- a/.travis.yml
+++ b/.travis.yml
@@ -41,6 +41,7 @@ install:
   - python setup.py build_ext --inplace
   - python setup.py install
   - cd ..
+  - export PYTHONPATH=$HOME/Starfish/:$PYTHONPATH
 # - pip install https://github.com/iancze/Starfish/archive/master.zip
 
 # command to run tests
