--- a/.travis.yml
+++ b/.travis.yml
@@ -19,11 +19,16 @@ before_install:
   - conda update -q conda
   - conda info -a
   - conda config --add channels conda-forge
-# command to install dependencies
+
+cache:
+  directories:
+    - $HOME/.cache/pip
+
 install:
   - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION numpy scipy astropy matplotlib numba llvmlite multiprocess ephem tqdm joblib
   - source activate test-environment
-  # Test requirements
+
+ # Test requirements
   - travis_retry pip install -r test_requirements.txt
 
   - travis_retry pip install -r requirements.txt
@@ -44,7 +49,7 @@ install:
   - export PYTHONPATH=$HOME/Starfish/:$PYTHONPATH
 # - pip install https://github.com/iancze/Starfish/archive/master.zip
 
-# command to run tests
+
 script:
     pytest --cov=. --cov-report term-missing --durations 5
 
