--- a/.travis.yml
+++ b/.travis.yml
@@ -41,7 +41,8 @@ install:
   - python setup.py build_ext --inplace
   - python setup.py install
   - cd ..
-  - export PYTHONPATH=$HOME/Starfish/:$PYTHONPATH
+  - export PYTHONPATH=$HOME/Starfish/:$HOME/Starfish/Starfish/:$HOME/Starfish/scripts/:$PYTHONPATH
+  - export PATH=$HOME/Starfish/:$HOME/Starfish/Starfish/:$HOME/Starfish/scripts/:$PATH
 # - pip install https://github.com/iancze/Starfish/archive/master.zip
 
 # command to run tests
