--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,6 @@ before_install:
   - conda config --add channels conda-forge
   - conda update -q conda
   - conda info -a
-  - conda config --add channels conda-forge
 
 cache:
   directories:
@@ -30,7 +29,6 @@ install:
 
  # Test requirements
   - travis_retry pip install -r test_requirements.txt
-
   - travis_retry pip install -r requirements.txt
   - travis_retry python setup.py install
 
@@ -40,11 +38,12 @@ install:
   # Install Starfish
   - travis_retry conda install h5py cython pyyaml scikit-learn emcee corner
   - travis_retry git clone  https://github.com/iancze/Starfish.git
-  - travis_retry pip install -r Starfish/requirements.txt
   - cd Starfish
+  - conda install --yes scipy matplotlib Cython h5py scikit-learn astropy pyyaml pytest   # from starfish's .travis.yml
+  - travis_retry pip install -r requirements.txt
   - rm tests -rf   # to not test Starfish
   - python setup.py build_ext --inplace
-  - python setup.py install
+  - sudo python setup.py install
   - cd ..
   - export PYTHONPATH=$HOME/Starfish/:$HOME/Starfish/Starfish/:$HOME/Starfish/scripts/:$PYTHONPATH
   - export PATH=$HOME/Starfish/:$HOME/Starfish/Starfish/:$HOME/Starfish/scripts/:$PATH
