--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,12 @@ language: python
 python:
     - "3.5"
     - "3.6"
+    - nightly
+
+matrix:
+  fast_finish: true
+  allow_failures:
+    - python: nightly
 
 before_install:
   # http://conda.pydata.org/docs/travis.html
