--- a/.travis.yml
+++ b/.travis.yml
@@ -42,7 +42,7 @@ install:
   - travis_retry pip install -r requirements.txt
   - rm tests -rf   # to not test Starfish
   - python setup.py build_ext --inplace
-  - sudo python setup.py install
+  - python setup.py install
   - cd ..
   - export PYTHONPATH=$HOME/Starfish/:$HOME/Starfish/Starfish/:$HOME/Starfish/scripts/:$PYTHONPATH
   - export PATH=$HOME/Starfish/:$HOME/Starfish/Starfish/:$HOME/Starfish/scripts/:$PATH
