--- a/config.yaml
+++ b/config.yaml
@@ -30,9 +30,9 @@ instrument_ID: 0
 
 
 sim_grid:
-    gammas: (-20, 20, 1)  # (start, stop, step)
-    rvs: (-20, 20, 1)
-    alphas: (0.01, 0.3, 0.01)
+    gammas:  [-20, 20, 1]  # (start, stop, step)
+    rvs: [-20, 20, 1]
+    alphas: [0.01, 0.25, 0.005]
     teff1: None
     teff2: None
     feh_1: None
