Add results and specta path for Chi2 modules and scripts.
use simulators.paths[]  and simulators.starfish_grid["raw_path"]

--- a/config.yaml
+++ b/config.yaml
@@ -43,3 +43,5 @@ sim_grid:
 
 paths:
     parameters: "/home/jneal/Phd/data/parameter_files/"
+    spectra: "/home/jneal/.handy_spectra/"
+    output_dir: "Analysis/"
