--- a/.travis.yml
+++ b/.travis.yml
@@ -27,26 +27,26 @@ install:
   - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION numpy scipy astropy matplotlib numba llvmlite multiprocess ephem tqdm joblib
   - source activate test-environment
 
- # Test requirements
-  - travis_retry pip install -r test_requirements.txt
-  - travis_retry pip install -r requirements.txt
-
-  # Clone spectrum_overload
-  - travis_retry pip install https://github.com/jason-neal/spectrum_overload/archive/master.zip
-
   # Install Starfish
-  - travis_retry conda install h5py cython pyyaml scikit-learn emcee corner
+  - travis_retry conda install --yes scipy matplotlib Cython h5py scikit-learn astropy pyyaml pytest cython emcee corner
   - travis_retry git clone  https://github.com/iancze/Starfish.git
+  - travis_retry pip install -r Starfish/requirements.txt
+  - rm Starfish/tests -rf   # to not test Starfish
   - cd Starfish
-  - conda install --yes scipy matplotlib Cython h5py scikit-learn astropy pyyaml pytest   # from starfish's .travis.yml
-  - travis_retry pip install -r requirements.txt
-  - rm tests -rf   # to not test Starfish
   - python setup.py build_ext --inplace
   - python setup.py install
   - cd ..
   - export PYTHONPATH=$HOME/Starfish/:$HOME/Starfish/Starfish/:$HOME/Starfish/scripts/:$PYTHONPATH
   - export PATH=$HOME/Starfish/:$HOME/Starfish/Starfish/:$HOME/Starfish/scripts/:$PATH
-# - pip install https://github.com/iancze/Starfish/archive/master.zip
+  # - pip install https://github.com/iancze/Starfish/archive/master.zip
+
+  # Now install companion simulations
+  # Test requirements
+  - travis_retry pip install -r test_requirements.txt
+  - travis_retry pip install -r requirements.txt
+
+  # Clone spectrum_overload
+  - travis_retry pip install https://github.com/jason-neal/spectrum_overload/archive/master.zip
 
   - travis_retry python setup.py install
 
