--- a/.travis.yml
+++ b/.travis.yml
@@ -32,13 +32,16 @@ install:
   - travis_retry git clone  https://github.com/iancze/Starfish.git
   - travis_retry pip install -r Starfish/requirements.txt
   - rm Starfish/tests -rf   # to not test Starfish
+  - python -c "import Starfish"
   - cd Starfish
   - python setup.py build_ext --inplace
   - python setup.py install
+  - python -c "import Starfish"
   - cd ..
   - export PYTHONPATH=$HOME/Starfish/:$HOME/Starfish/Starfish/:$HOME/Starfish/scripts/:$PYTHONPATH
   - export PATH=$HOME/Starfish/:$HOME/Starfish/Starfish/:$HOME/Starfish/scripts/:$PATH
   # - pip install https://github.com/iancze/Starfish/archive/master.zip
+  - python -c "import Starfish"
 
   # Now install companion simulations
   # Test requirements
@@ -49,6 +52,7 @@ install:
   - travis_retry pip install https://github.com/jason-neal/spectrum_overload/archive/master.zip
 
   - travis_retry python setup.py install
+  - python -c "import Starfish"
 
 script:
     pytest --cov=. --cov-report term-missing --durations 5
