remove --inplace from build_ext

--- a/.travis.yml
+++ b/.travis.yml
@@ -37,7 +37,7 @@ install:
   - rm Starfish_dir/tests -rf   # to not test Starfish
   # - python -c "import Starfish"
   - cd starfish_dir
-  - python setup.py build_ext --inplace
+  - python setup.py build_ext
   - python setup.py install
   - python -c "import Starfish"
   - python -c "from Starfish.covariance import get_dense_C"
