--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 language: python
 python:
+    - "3.4"
     - "3.5"
     - "3.6"
 
@@ -24,31 +25,29 @@ cache:
     - $HOME/.cache/pip
 
 install:
-  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION numpy scipy astropy matplotlib numba llvmlite multiprocess ephem tqdm joblib
+  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION astropy ephem joblib llvmlite matplotlib multiprocess numba numpy scipy tqdm
   - source activate test-environment
 
- # Test requirements
+  # Install Starfish
+  - cd $HOME
+  - travis_retry git clone https://github.com/iancze/Starfish.git
+  - cd Starfish
+  - travis_retry conda install --yes astropy cython emcee h5py matplotlib pytest pyyaml scikit-learn scipy
+  - travis_retry pip install -r requirements.txt
+  - python setup.py build_ext --inplace
+  - python setup.py develop
+
+  # Now install companion simulations
+  # Test requirements
+  - cd $TRAVIS_BUILD_DIR               # Return to original directory
   - travis_retry pip install -r test_requirements.txt
   - travis_retry pip install -r requirements.txt
 
   # Clone spectrum_overload
   - travis_retry pip install https://github.com/jason-neal/spectrum_overload/archive/master.zip
-
-  # Install Starfish
-  - travis_retry conda install h5py cython pyyaml scikit-learn emcee corner
-  - travis_retry git clone  https://github.com/iancze/Starfish.git
-  - cd Starfish
-  - conda install --yes scipy matplotlib Cython h5py scikit-learn astropy pyyaml pytest   # from starfish's .travis.yml
-  - travis_retry pip install -r requirements.txt
-  - rm tests -rf   # to not test Starfish
-  - python setup.py build_ext --inplace
+  # Wget Get_filenames.py
+  - wget https://raw.githubusercontent.com/jason-neal/equanimous-octo-tribble/master/Get_filenames.py
   - python setup.py install
-  - cd ..
-  - export PYTHONPATH=$HOME/Starfish/:$HOME/Starfish/Starfish/:$HOME/Starfish/scripts/:$PYTHONPATH
-  - export PATH=$HOME/Starfish/:$HOME/Starfish/Starfish/:$HOME/Starfish/scripts/:$PATH
-# - pip install https://github.com/iancze/Starfish/archive/master.zip
-
-  - travis_retry python setup.py install
 
 script:
     pytest --cov=. --cov-report term-missing --durations 5
