fix config name

--- a/.travis.yml
+++ b/.travis.yml
@@ -49,7 +49,7 @@ install:
   - wget https://raw.githubusercontent.com/jason-neal/equanimous-octo-tribble/master/Get_filenames.py
   - python setup.py install
 
-  - cp tests/config.yml .
+  - cp tests/config.yaml .
 
 script:
     pytest --cov=. --cov-report term-missing --durations 5
