--- a/requirements.txt
+++ b/requirements.txt
@@ -11,4 +11,5 @@ joblib==0.11
 numba==0.35.0
 multiprocess==0.70.5
 tqdm==4.17.1
+typing>=3.5.3.0  # Otherwise yarl fail with python 3.4
 PyAstronomy==0.11.1
