--- a/.travis.yml
+++ b/.travis.yml
@@ -52,7 +52,7 @@ install:
   - cp tests/config.yaml .
 
 script:
-    pytest --cov=. --cov-report term-missing --durations 5
+    pytest --cov=. --cov-report term-missing --durations 5 -v
 
 after_success:
   - coveralls -i
