--- a/.travis.yml
+++ b/.travis.yml
@@ -51,7 +51,7 @@ install:
   - cp tests/config.yaml .
 
 script:
-    pytest --cov=. --cov-report term-missing --durations 5 -v
+    pytest --cov=. --cov-report term-missing
 
 after_success:
   - coveralls -i
