--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,5 +1,5 @@
 environment:
-  clone_folder: c:\projects\sims
+
   matrix:
     # For Python versions available on Appveyor, see
     # http://www.appveyor.com/docs/installed-software#python
@@ -22,7 +22,7 @@ install:
 
 
   # Installing companion sims now
-  - "cd c:\\projects\\sims"
+  - "cd c:\\projects\\companion-simulations"
   - "%PYTHON%\\python.exe -m pip install -r requirements.txt"
   - "%PYTHON%\\python.exe -m pip install -r test_requirements.txt"
   - "%PYTHON%\\python.exe setup.py install"
