--- a/Analysis/config.yaml
+++ b/Analysis/config.yaml
@@ -27,3 +27,25 @@ grid:
 chunk_ID: 0
 spectrum_ID: 0
 instrument_ID: 0
+
+
+sim_grid:
+    gammas: [-20, 20, 1]  # (start, stop, step)
+    rvs: [-20, 20, 1]
+    alphas: [0.01, 0.25, 0.005]
+    teff1: None
+    teff2: None
+    feh_1: None
+    feh_2: None
+    log_1: None
+    log_2: None
+    arb_norm: [0.95, 1.05, 0.02]   # Arbitrary normalization inside chisquare
+
+paths:
+    parameters: "/home/jneal/Phd/data/parameter_files/"
+    spectra: "/home/jneal/.handy_spectra/"
+    output_dir: "Analysis/"
+
+
+# Valid values [tell_corr, h2o_tell_corr, berv_mask, berv_corr, h2o_berv_corr, h2o_berv_mask]
+spec_version: berv_mask
