--- a/Notebooks/config.yaml
+++ b/Notebooks/config.yaml
@@ -45,3 +45,7 @@ paths:
     parameters: "/home/jneal/Phd/data/parameter_files/"
     spectra: "/home/jneal/.handy_spectra/"
     output_dir: "Analysis/"
+
+
+# Valid values [tell_corr, h2o_tell_corr, berv_mask, berv_corr, h2o_berv_corr, h2o_berv_mask]
+spec_version: berv_mask
