--- a/starfish/config.yaml
+++ b/starfish/config.yaml
@@ -27,3 +27,7 @@ grid:
 chunk_ID: 0
 spectrum_ID: 0
 instrument_ID: 0
+
+
+# Valid values [tell_corr, h2o_tell_corr, berv_mask, berv_corr, h2o_berv_corr, h2o_berv_mask]
+spec_version: berv_mask
