--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,16 @@
-pyyaml
-sqlalchemy
-# Starfish
-numpy==1.13.3
-scipy==0.19.1
 astropy==2.0.2
 matplotlib==2.0.2
-pandas==0.20.3
 ephem==3.7.6.0
 joblib==0.11
+jsmin
 numba==0.35.0
+numpy==1.13.3
 multiprocess==0.70.5
+pandas==0.20.3
+scipy==0.19.1
+# Starfish
+sqlalchemy
 tqdm==4.17.1
 typing>=3.5.3.0  # Otherwise yarl fail with python 3.4
 PyAstronomy==0.11.1
+pyyaml
