--- a/config.yaml
+++ b/config.yaml
@@ -49,3 +49,8 @@ paths:
 
 # Valid values [tell_corr, h2o_tell_corr, berv_mask, berv_corr, h2o_berv_corr, h2o_berv_mask]
 spec_version: berv_mask
+
+# Betasigma noise estimation parameters
+betasigma:
+    N: 5
+    j: 2
