--- a/appveyor.yml
+++ b/appveyor.yml
@@ -37,18 +37,18 @@ test_script:
   # Note that you must use the environment variable %PYTHON% to refer to
   # the interpreter you're using - Appveyor does not do anything special
   # to put the Python version you want to use on PATH.
-  - "pytest --cov=. --cov-report term-missing"
+  - cmd: "%PYTHON%\\python.exe -m pytest --cov=. --cov-report term-missing"
 
 after_test:
   # This step builds your wheels.
   # Again, you only need build.cmd if you're building C extensions for
   # 64-bit Python 3.3/3.4. And you need to use %PYTHON% to get the correct
   # interpreter
-  # - "build.cmd %PYTHON%\\python.exe setup.py bdist_wheel"
+  - cmd: "%PYTHON%\\python.exe setup.py sdist bdist_wheel"
 
 artifacts:
   # bdist_wheel puts your built wheel in the dist directory
-  # - path: dist\*
+  - path: dist\*
 
 #on_success:
 #  You can use this step to upload your artifacts to a public website.
