--- a/.travis.yml
+++ b/.travis.yml
@@ -42,8 +42,13 @@ install:
 
   - cp tests/config.yaml .
 
+before_script:  # configure headless display for matplotlib backend
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+  - sleep 3  # give xvfb some time to start
+
 script:
-    pytest --cov=. --cov-report term-missing
+  -  pytest --cov=. --cov-report term-missing
 
 after_success:
   - coveralls -i
