--- a/appveyor.yml
+++ b/appveyor.yml
@@ -22,7 +22,7 @@ install:
 
 
   # Installing companion sims now
-  - "cd c:\\projects\\companion-simulations"
+  - "cd c:\\projects\\companion_simulations"
   - "%PYTHON%\\python.exe -m pip install -r requirements.txt"
   - "%PYTHON%\\python.exe -m pip install -r test_requirements.txt"
   - "%PYTHON%\\python.exe setup.py install"
