--- a/appveyor.yml
+++ b/appveyor.yml
@@ -27,6 +27,9 @@ install:
   - "%PYTHON%\\python.exe -m pip install -r test_requirements.txt"
   - "%PYTHON%\\python.exe setup.py install"
 
+  # Handle config for windows
+  - "move tests\\appveyor_config.yaml config.yaml"
+
 build: off
 
 test_script:
