--- a/.travis.yml
+++ b/.travis.yml
@@ -21,22 +21,20 @@ cache:
 install:
   - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION astropy ephem joblib llvmlite matplotlib multiprocess numba numpy scipy tqdm
   - source activate test-environment
+  - travis_retry pip install -r test_requirements.txt
+  - travis_retry pip install -r requirements.txt
 
-  # Install Starfish
+# Install Starfish
   - cd $HOME
   - travis_retry git clone https://github.com/iancze/Starfish.git
   - cd Starfish
-  - travis_retry conda install --yes astropy cython emcee h5py matplotlib pytest pyyaml scikit-learn scipy
+  - travis_retry conda install --yes astropy cython emcee h5py matplotlib pytest scikit-learn scipy
   - travis_retry pip install -r requirements.txt
   - python setup.py build_ext --inplace
   - python setup.py develop
 
   # Now install companion simulations
-  # Test requirements
   - cd $TRAVIS_BUILD_DIR               # Return to original directory
-  - travis_retry pip install -r test_requirements.txt
-  - travis_retry pip install -r requirements.txt
-
   - python setup.py install
 
   - cp tests/config.yaml .
