--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,6 +11,8 @@ environment:
 install:
   # We need wheel installed to build wheels
   - "%PYTHON%\\python.exe -m pip install wheel"
+  - "%PYTHON%\\python.exe -m pip install -r requirements.txt"
+  - "%PYTHON%\\python.exe -m pip install -r test_requirements.txt"
 
   # Installing Starfish
   - "cd c:\\projects"
@@ -21,10 +23,8 @@ install:
   - "%PYTHON%\\python.exe setup.py develop"
 
 
-  # Installing companion sims now
+  # Installing companion sims
   - "cd %APPVEYOR_BUILD_FOLDER%"
-  - "%PYTHON%\\python.exe -m pip install -r requirements.txt"
-  - "%PYTHON%\\python.exe -m pip install -r test_requirements.txt"
   - "%PYTHON%\\python.exe setup.py install"
 
   # Handle config for windows
