--- a/.pyup.yml
+++ b/.pyup.yml
@@ -15,7 +15,7 @@ branch: develop
 # update schedule
 # default: empty
 # allowed: "every day", "every week", ..
-schedule: "every two weeks on tuesday"
+schedule: "every month"
 
 # search for requirement files
 # default: True
