--- a/.shippable.yml
+++ b/.shippable.yml
@@ -4,6 +4,9 @@ python:
     - 3.6
     - 3.7
 
+matrix:
+  fast_finish: true
+
 before_install:
   # http://conda.pydata.org/docs/travis.html
   - travis_retry sudo apt-get update
