--- a/appveyor.yml
+++ b/appveyor.yml
@@ -28,6 +28,8 @@ install:
   - "cd %APPVEYOR_BUILD_FOLDER%"
   - "%PYTHON%\\python.exe setup.py install"
 
+  - "copy tests\\config.yaml ."
+
 build: off
 
 test_script:
