--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,18 @@
-astropy==2.0.4
-matplotlib==2.1.2
-ephem==3.7.6.0
-joblib==0.11
-jsmin==2.2.2
-numba==0.36.2
-numpy==1.14.0
-multiprocess==0.70.5
-pandas==0.22.0
-scipy==1.0.0
-spectrum-overload==0.2.1
+astropy
+matplotlib
+ephem
+joblib>=0.12
+jsmin
+numba
+numpy
+multiprocess
+pandas
+scipy
+spectrum-overload>=0.2.1
 # Starfish
-sqlalchemy==1.2.2
-tqdm==4.19.5
+sqlalchemy
+tqdm
 typing>=3.5.3.0  # Otherwise yarl fail with python 3.4
-PyAstronomy==0.12.0
-pyyaml==3.12
-logutils==0.3.5
+PyAstronomy>=0.12.0
+pyyaml
+logutils
