--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,15 @@
-dist: xenial
 sudo: true
 language: python
 python:
     - "3.5"
     - "3.6"
-    - "3.7"
 
 matrix:
   fast_finish: true
+  include:
+    - python: 3.7
+      dist: xenial  # Required for Python 3.7
+      sudo: true    # travis-ci/travis-ci#9069
 
 
 cache:
