--- a/.travis.yml
+++ b/.travis.yml
@@ -5,12 +5,7 @@ python:
 
 before_install:
   # http://conda.pydata.org/docs/travis.html
-  - travis_retry sudo apt-get update
-  - if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then
-       travis_retry wget https://repo.continuum.io/miniconda/Miniconda2-latest-Linux-x86_64.sh -O miniconda.sh;
-    else
-       travis_retry wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
-    fi
+  - travis_retry wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
   - bash miniconda.sh -b -p $HOME/miniconda
   - export PATH="$HOME/miniconda/bin:$PATH"
   - hash -r
@@ -44,8 +39,13 @@ install:
 
   - cp tests/config.yaml .
 
+before_script:  # configure headless display for matplotlib backend
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+  - sleep 3  # give xvfb some time to start
+
 script:
-    pytest --cov=. --cov-report term-missing
+  -  pytest --cov=. --cov-report term-missing
 
 after_success:
   - coveralls -i
