--- a/.shippable.yml
+++ b/.shippable.yml
@@ -2,29 +2,18 @@ language: python
 python:
     - 3.5
     - 3.6
+    - 3.7
 
-before_install:
-  # http://conda.pydata.org/docs/travis.html
-  - travis_retry sudo apt-get update
-  - if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then
-       travis_retry wget https://repo.continuum.io/miniconda/Miniconda2-latest-Linux-x86_64.sh -O miniconda.sh;
-    else
-       travis_retry wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
-    fi
-  - bash miniconda.sh -b -p $HOME/miniconda
-  - export PATH="$HOME/miniconda/bin:$PATH"
-  - hash -r
-  - conda config --set always_yes yes --set changeps1 no
-  - conda config --add channels conda-forge
-  - conda update -q conda
-  - conda info -a
+matrix:
+  fast_finish: true
 
 cache:
   directories:
     - $HOME/.cache/pip
 
 install:
-  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION astropy ephem joblib llvmlite matplotlib multiprocess numba numpy scipy tqdm
+  - apt-get install libfreetype6-dev
+  - apt-get install libpng12-dev
   - source activate test-environment
   - travis_retry pip install -r test_requirements.txt
   - travis_retry pip install -r requirements.txt
@@ -33,7 +22,6 @@ install:
   - cd $HOME
   - travis_retry git clone https://github.com/iancze/Starfish.git
   - cd Starfish
-  - travis_retry conda install --yes astropy cython emcee h5py matplotlib pytest scikit-learn scipy
   - travis_retry pip install -r requirements.txt
   - python setup.py build_ext --inplace
   - python setup.py develop
@@ -43,10 +31,8 @@ install:
   - python setup.py install
 
 build:
-  pre-ci:
-    - cp tests/config.yaml .
-
   ci:
+    - cp tests/config.yaml .
     # Create folders for test and code coverage
     - mkdir -p shippable/testresults
     - mkdir -p shippable/codecoverage
