--- a/.travis.yml
+++ b/.travis.yml
@@ -1,31 +1,22 @@
+sudo: true
 language: python
 python:
     - "3.5"
     - "3.6"
 
-before_install:
-  # http://conda.pydata.org/docs/travis.html
-  - travis_retry sudo apt-get update
-  - if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then
-       travis_retry wget https://repo.continuum.io/miniconda/Miniconda2-latest-Linux-x86_64.sh -O miniconda.sh;
-    else
-       travis_retry wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
-    fi
-  - bash miniconda.sh -b -p $HOME/miniconda
-  - export PATH="$HOME/miniconda/bin:$PATH"
-  - hash -r
-  - conda config --set always_yes yes --set changeps1 no
-  - conda config --add channels conda-forge
-  - conda update -q conda
-  - conda info -a
+matrix:
+  fast_finish: true
+  include:
+    - python: 3.7
+      dist: xenial  # Required for Python 3.7
+      sudo: true    # travis-ci/travis-ci#9069
+
 
 cache:
   directories:
     - $HOME/.cache/pip
 
 install:
-  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION astropy ephem joblib llvmlite matplotlib multiprocess numba numpy scipy tqdm
-  - source activate test-environment
   - travis_retry pip install -r test_requirements.txt
   - travis_retry pip install -r requirements.txt
 
@@ -33,7 +24,6 @@ install:
   - cd $HOME
   - travis_retry git clone https://github.com/iancze/Starfish.git
   - cd Starfish
-  - travis_retry conda install --yes astropy cython emcee h5py matplotlib pytest scikit-learn scipy
   - travis_retry pip install -r requirements.txt
   - python setup.py build_ext --inplace
   - python setup.py develop
@@ -44,8 +34,13 @@ install:
 
   - cp tests/config.yaml .
 
+before_script:  # configure headless display for matplotlib backend
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+  - sleep 3  # give xvfb some time to start
+
 script:
-    pytest --cov=. --cov-report term-missing
+  -  pytest --cov=. --cov-report term-missing
 
 after_success:
   - coveralls -i
