--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
 sudo: true
 language: python
+dist: xenial
+services:
+  - xvfb
+  
 python:
     - "3.5"
     - "3.6"
@@ -8,7 +12,6 @@ matrix:
   fast_finish: true
   include:
     - python: 3.7
-      dist: xenial  # Required for Python 3.7
       sudo: true    # travis-ci/travis-ci#9069
 
 cache:
@@ -32,11 +35,6 @@ install:
   - python setup.py install
 
   - cp tests/config.yaml .
-
-before_script:  # configure headless display for matplotlib backend
-  - "export DISPLAY=:99.0"
-  - "sh -e /etc/init.d/xvfb start"
-  - sleep 3  # give xvfb some time to start
 
 script:
   -  pytest --cov=. --cov-report term-missing
