--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ pandas
 scipy
 spectrum-overload>=0.2.1
 # Starfish
-sqlalchemy
+sqlalchemy>=1.3.0
 tqdm
 typing>=3.5.3.0  # Otherwise yarl fail with python 3.4
 PyAstronomy>=0.12.0
